<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_landscape"
    tools:context="com.example.android.udacitypracticalquiz.DetailActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar">

        <ImageView
            android:id="@+id/img_user"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/user_profile_image_desc"
            app:srcCompat="@drawable/ic_user" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_user"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:padding="7dp"
            android:text="@string/tv_username_default"
            android:textAlignment="center"
            android:textColor="@color/colorTextUserDetails"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_username"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:padding="7dp"
            android:text="@string/tv_user_email_default"
            android:textAlignment="center"
            android:textColor="@color/colorTextUserDetails"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_email"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:padding="7dp"
            android:text="@string/tv_user_desc_default"
            android:textAlignment="center"
            android:textColor="@color/colorTextUserDetails"
            android:textSize="24sp" />

    </RelativeLayout>

</RelativeLayout>
