<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_shaded_mountains_scene"
    tools:context="com.example.android.udacitypracticalquiz.MainActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar"
        android:gravity="center">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:ems="10"
            android:hint="@string/et_hint_username"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_username"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
            android:drawableStart="@drawable/ic_mail_outline_black_24dp"
            android:ems="10"
            android:hint="@string/et_hint_email"
            android:inputType="textEmailAddress"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/et_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_email"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:drawableLeft="@drawable/ic_chat_black_24dp"
            android:drawableStart="@drawable/ic_chat_black_24dp"
            android:ems="10"
            android:hint="@string/et_hint_user_desc"
            android:inputType="textMultiLine"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_about"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:background="@color/colorAccent"
            android:padding="7dp"
            android:text="@string/btn_next"
            android:textAllCaps="true"
            android:textSize="18sp" />

    </RelativeLayout>


</RelativeLayout>
